Update to 1.1.2 implementation
DataManager:
- Updated code and libs to try and be Java 8 compliant
- Updated logging to use util from common JDTools library
- Updated Settings configs to use common model from JDTools library
- Updated BanManagerCache to use common SystemUtil from JDTools library
- Updated parsed log times to be long instead of int
- Updated 'ban' command to take argument for 'refresh', which will refresh the item ban list
- Updated player join parsing to ignore empty player names (can happen due to bug on DE's side sometimes)
- Updated player interactions (i.e. getting player from ServerData) to be based on both name and platform as needed, instead of just name
- Updated connection parser to use ServerData for storing guesstimate of connHandle -> player
- Updated DB storage to store weekly data by platform
- Updated DB storage to try and merge player data if the same player is encountered on multiple platforms
- Updated UID parsing to convert any UID with non-Alphanumeric characters to Base64, regardless of platform. Currently only did this for PSN, but in the event of future platforms having similar issues, made it a broader net now
- Updated weapon info tracking to denote type of weapon
- Added versioning system to track what version is currently being ran and allow for DB structure and other updates to be applied based on this
- Added new log line parsing for player leaving parser
- Added implementation for accountId parsing and tracking
- Added 'tracker' command for tracking players across different accounts
- Added dark split sword and Snowday variants to default customItems.json cfg
- Added 'host' and 'enableBanLoadoutPosting' options to config
- Added test log processor class and processing mode for debugging and random testing cases
- Added transactionIDs to requests for adding data to service
- Added support for match start times and current level parsing
- Added 'kick' command
- Fixed potential concurrent modification issue if a ban is add